@@ -9,15 +9,20 @@
   
 -------------- Shoes 3.3.3 ---------------------------------
 === New with 3.3.3
-  * can specify your own title for ask_open_file and friends
+  * can specify your own title for ask_open_file andfriends
     https://github.com/Shoes3/shoes3/issues/282
+  * new target 'msys2' for windows builds - very experimental
 
 === Fixed with 3.3.3
-  * redirects of http to https - common now a days
+  * redirects of http to https - common now a days WIP
     https://github.com/Shoes3/shoes3/issues/304
   * allow some Shoes built in dialogs like ask, confirm, ...
     to be used before Shoes.app is called.
     https://github.com/Shoes3/shoes3/issues/303
+  * gifs working on Windows again?
+    https://github.com/Shoes3/shoes3/issues/306
+  * can add title: to ask_open|save_file|folder
+    https://github.com/Shoes3/shoes3/issues/282
 
   
 -------------- Shoes 3.3.2 ----------------------------------
